# kanban_ai_chat

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: AGENTS.md  pyproject.toml
backend/app/: ai_chat_service.py  ai_client.py  board_service.py  db.py  main.py  schemas.py  views.py
backend/tests/: test_ai_chat_service.py  test_ai_client.py  test_app_integration.py  test_board_api.py  test_board_service.py  test_db.py  test_views.py
docs/: PLAN.md  REPOSITORY_DESCRIPTION.md  RUNNING.md
frontend/: AGENTS.md
frontend/src/app/: page.test.tsx  page.tsx
frontend/src/components/: KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx
frontend/src/lib/: aiChatApi.test.ts  aiChatApi.ts  boardApi.test.ts  boardApi.ts  kanban.ts
frontend/test-results/: .last-run.json
frontend/test-results/kanban-keeps-board-changes-after-logout-and-next-login-chromium-repeat1/: error-context.md
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start.bat  start.ps1  start.sh
